added api calls in our application

--- a/index.html
+++ b/index.html
@@ -36,5 +36,21 @@
             </div>
         </div>
     </div>
+
+    <script>
+        const apiKey="53fface8342cdf328b8ec09efdd69330";
+    
+        const apiUrl="https://api.openweathermap.org/data/2.5/weather?units=metric&q=bangalore"
+    
+        async function checkWeather(){
+            const response=await fetch(apiUrl + `&appid=${apiKey}` );
+            var data=await response.json();
+            console.log(data);
+        }
+
+        checkWeather();
+    </script> 
+
 </body>
 </html>
+
